duktape-sys/src/ffi.rs

extern "C" {
    pub fn duk_get_length(ctx: *mut duk_context, idx: duk_idx_t) -> duk_size_t;
}
extern "C" {
    pub fn duk_require_undefined(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_require_null(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_require_boolean(ctx: *mut duk_context, idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_require_number(ctx: *mut duk_context, idx: duk_idx_t) -> duk_double_t;
}
extern "C" {
    pub fn duk_require_int(ctx: *mut duk_context, idx: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_require_uint(ctx: *mut duk_context, idx: duk_idx_t) -> duk_uint_t;
}
extern "C" {
    pub fn duk_require_string(
        ctx: *mut duk_context,
        idx: duk_idx_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_require_lstring(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        out_len: *mut duk_size_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_require_buffer(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        out_size: *mut duk_size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_require_buffer_data(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        out_size: *mut duk_size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_require_pointer(
        ctx: *mut duk_context,
        idx: duk_idx_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_require_c_function(ctx: *mut duk_context, idx: duk_idx_t) -> duk_c_function;
}
extern "C" {
    pub fn duk_require_context(ctx: *mut duk_context, idx: duk_idx_t) -> *mut duk_context;
}
extern "C" {
    pub fn duk_require_function(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_require_heapptr(
        ctx: *mut duk_context,
        idx: duk_idx_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_to_undefined(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_to_null(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_to_boolean(ctx: *mut duk_context, idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_to_number(ctx: *mut duk_context, idx: duk_idx_t) -> duk_double_t;
}
extern "C" {
    pub fn duk_to_int(ctx: *mut duk_context, idx: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_to_uint(ctx: *mut duk_context, idx: duk_idx_t) -> duk_uint_t;
}
extern "C" {
    pub fn duk_to_int32(ctx: *mut duk_context, idx: duk_idx_t) -> duk_int32_t;
}
extern "C" {
    pub fn duk_to_uint32(ctx: *mut duk_context, idx: duk_idx_t) -> duk_uint32_t;
}
extern "C" {
    pub fn duk_to_uint16(ctx: *mut duk_context, idx: duk_idx_t) -> duk_uint16_t;
}
extern "C" {
    pub fn duk_to_string(ctx: *mut duk_context, idx: duk_idx_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_to_lstring(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        out_len: *mut duk_size_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_to_buffer_raw(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        out_size: *mut duk_size_t,
        flags: duk_uint_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_to_pointer(ctx: *mut duk_context, idx: duk_idx_t) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_to_object(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_to_defaultvalue(ctx: *mut duk_context, idx: duk_idx_t, hint: duk_int_t);
}
extern "C" {
    pub fn duk_to_primitive(ctx: *mut duk_context, idx: duk_idx_t, hint: duk_int_t);
}
extern "C" {
    pub fn duk_safe_to_lstring(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        out_len: *mut duk_size_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_base64_encode(
        ctx: *mut duk_context,
        idx: duk_idx_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_base64_decode(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_hex_encode(ctx: *mut duk_context, idx: duk_idx_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_hex_decode(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_json_encode(ctx: *mut duk_context, idx: duk_idx_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_json_decode(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_resize_buffer(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        new_size: duk_size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_steal_buffer(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        out_size: *mut duk_size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_config_buffer(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        ptr: *mut ::std::os::raw::c_void,
        len: duk_size_t,
    );
}
extern "C" {
    pub fn duk_get_prop(ctx: *mut duk_context, obj_idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_prop_string(
        ctx: *mut duk_context,
        obj_idx: duk_idx_t,
        key: *const ::std::os::raw::c_char,
    ) -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_prop_index(
        ctx: *mut duk_context,
        obj_idx: duk_idx_t,
        arr_idx: duk_uarridx_t,
    ) -> duk_bool_t;
}
extern "C" {
    pub fn duk_put_prop(ctx: *mut duk_context, obj_idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_put_prop_string(
        ctx: *mut duk_context,
        obj_idx: duk_idx_t,
        key: *const ::std::os::raw::c_char,
    ) -> duk_bool_t;
}
extern "C" {
    pub fn duk_put_prop_index(
        ctx: *mut duk_context,
        obj_idx: duk_idx_t,
        arr_idx: duk_uarridx_t,
    ) -> duk_bool_t;
}
extern "C" {
    pub fn duk_del_prop(ctx: *mut duk_context, obj_idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_del_prop_string(
        ctx: *mut duk_context,
        obj_idx: duk_idx_t,
        key: *const ::std::os::raw::c_char,
    ) -> duk_bool_t;
}
extern "C" {
    pub fn duk_del_prop_index(
        ctx: *mut duk_context,
        obj_idx: duk_idx_t,
        arr_idx: duk_uarridx_t,
    ) -> duk_bool_t;
}
extern "C" {
    pub fn duk_has_prop(ctx: *mut duk_context, obj_idx: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_has_prop_string(
        ctx: *mut duk_context,
        obj_idx: duk_idx_t,
        key: *const ::std::os::raw::c_char,
    ) -> duk_bool_t;
}
extern "C" {
    pub fn duk_has_prop_index(
        ctx: *mut duk_context,
        obj_idx: duk_idx_t,
        arr_idx: duk_uarridx_t,
    ) -> duk_bool_t;
}
extern "C" {
    pub fn duk_def_prop(ctx: *mut duk_context, obj_idx: duk_idx_t, flags: duk_uint_t);
}
extern "C" {
    pub fn duk_get_global_string(
        ctx: *mut duk_context,
        key: *const ::std::os::raw::c_char,
    ) -> duk_bool_t;
}
extern "C" {
    pub fn duk_put_global_string(
        ctx: *mut duk_context,
        key: *const ::std::os::raw::c_char,
    ) -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_prototype(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_set_prototype(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_get_finalizer(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_set_finalizer(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_set_global_object(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_get_magic(ctx: *mut duk_context, idx: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_set_magic(ctx: *mut duk_context, idx: duk_idx_t, magic: duk_int_t);
}
extern "C" {
    pub fn duk_get_current_magic(ctx: *mut duk_context) -> duk_int_t;
}
extern "C" {
    pub fn duk_put_function_list(
        ctx: *mut duk_context,
        obj_idx: duk_idx_t,
        funcs: *const duk_function_list_entry,
    );
}
extern "C" {
    pub fn duk_put_number_list(
        ctx: *mut duk_context,
        obj_idx: duk_idx_t,
        numbers: *const duk_number_list_entry,
    );
}
extern "C" {
    pub fn duk_compact(ctx: *mut duk_context, obj_idx: duk_idx_t);
}
extern "C" {
    pub fn duk_enum(ctx: *mut duk_context, obj_idx: duk_idx_t, enum_flags: duk_uint_t);
}
extern "C" {
    pub fn duk_next(
        ctx: *mut duk_context,
        enum_idx: duk_idx_t,
        get_value: duk_bool_t,
    ) -> duk_bool_t;
}
extern "C" {
    pub fn duk_concat(ctx: *mut duk_context, count: duk_idx_t);
}
extern "C" {
    pub fn duk_join(ctx: *mut duk_context, count: duk_idx_t);
}
extern "C" {
    pub fn duk_decode_string(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        callback: duk_decode_char_function,
        udata: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn duk_map_string(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        callback: duk_map_char_function,
        udata: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn duk_substring(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        start_char_offset: duk_size_t,
        end_char_offset: duk_size_t,
    );
}
extern "C" {
    pub fn duk_trim(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_char_code_at(
        ctx: *mut duk_context,
        idx: duk_idx_t,
        char_offset: duk_size_t,
    ) -> duk_codepoint_t;
}
extern "C" {
    pub fn duk_equals(ctx: *mut duk_context, idx1: duk_idx_t, idx2: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_strict_equals(ctx: *mut duk_context, idx1: duk_idx_t, idx2: duk_idx_t)
        -> duk_bool_t;
}
extern "C" {
    pub fn duk_instanceof(ctx: *mut duk_context, idx1: duk_idx_t, idx2: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_call(ctx: *mut duk_context, nargs: duk_idx_t);
}
extern "C" {
    pub fn duk_call_method(ctx: *mut duk_context, nargs: duk_idx_t);
}
extern "C" {
    pub fn duk_call_prop(ctx: *mut duk_context, obj_idx: duk_idx_t, nargs: duk_idx_t);
}
extern "C" {
    pub fn duk_pcall(ctx: *mut duk_context, nargs: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_pcall_method(ctx: *mut duk_context, nargs: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_pcall_prop(ctx: *mut duk_context, obj_idx: duk_idx_t, nargs: duk_idx_t)
        -> duk_int_t;
}
extern "C" {
    pub fn duk_new(ctx: *mut duk_context, nargs: duk_idx_t);
}
extern "C" {
    pub fn duk_pnew(ctx: *mut duk_context, nargs: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_safe_call(
        ctx: *mut duk_context,
        func: duk_safe_call_function,
        udata: *mut ::std::os::raw::c_void,
        nargs: duk_idx_t,
        nrets: duk_idx_t,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_eval_raw(
        ctx: *mut duk_context,
        src_buffer: *const ::std::os::raw::c_char,
        src_length: duk_size_t,
        flags: duk_uint_t,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_compile_raw(
        ctx: *mut duk_context,
        src_buffer: *const ::std::os::raw::c_char,
        src_length: duk_size_t,
        flags: duk_uint_t,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_dump_function(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_load_function(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_context_dump(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_debugger_attach(
        ctx: *mut duk_context,
        read_cb: duk_debug_read_function,
        write_cb: duk_debug_write_function,
        peek_cb: duk_debug_peek_function,
        read_flush_cb: duk_debug_read_flush_function,
        write_flush_cb: duk_debug_write_flush_function,
        request_cb: duk_debug_request_function,
        detached_cb: duk_debug_detached_function,
        udata: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn duk_debugger_detach(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_debugger_cooperate(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_debugger_notify(ctx: *mut duk_context, nvalues: duk_idx_t) -> duk_bool_t;
}
